Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -15,9 +15,8 @@
   <link href="/theme/css/animate.css" rel="stylesheet" type="text/css" />
   <link href="/theme/css/style.css" rel="stylesheet" type="text/css" />
 
-  <link rel="prerender" href="/projects" />
-  
-        </head>
+  <link rel="prerender" href="/projects" />   <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="AM Full Atom Feed"
+  />         </head>
 
 <body id="index" class="">
   <div class="container">
@@ -27,31 +26,39 @@
           <section class="navbar-section">
             <a href="/" class="navbar-brand mr-2">
               <span id="brand-in">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="brand-image" d="M488 312.7V456c0 13.3-10.7 24-24 24H348c-6.6 0-12-5.4-12-12V356c0-6.6-5.4-12-12-12h-72c-6.6 0-12 5.4-12 12v112c0 6.6-5.4 12-12 12H112c-13.3 0-24-10.7-24-24V312.7c0-3.6 1.6-7 4.4-9.3l188-154.8c4.4-3.6 10.8-3.6 15.3 0l188 154.8c2.7 2.3 4.3 5.7 4.3 9.3zm83.6-60.9L488 182.9V44.4c0-6.6-5.4-12-12-12h-56c-6.6 0-12 5.4-12 12V117l-89.5-73.7c-17.7-14.6-43.3-14.6-61 0L4.4 251.8c-5.1 4.2-5.8 11.8-1.6 16.9l25.5 31c4.2 5.1 11.8 5.8 16.9 1.6l235.2-193.7c4.4-3.6 10.8-3.6 15.3 0l235.2 193.7c5.1 4.2 12.7 3.5 16.9-1.6l25.5-31c4.2-5.2 3.4-12.7-1.7-16.9z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                  <path class="brand-image" d="M488 312.7V456c0 13.3-10.7 24-24 24H348c-6.6 0-12-5.4-12-12V356c0-6.6-5.4-12-12-12h-72c-6.6 0-12 5.4-12 12v112c0 6.6-5.4 12-12 12H112c-13.3 0-24-10.7-24-24V312.7c0-3.6 1.6-7 4.4-9.3l188-154.8c4.4-3.6 10.8-3.6 15.3 0l188 154.8c2.7 2.3 4.3 5.7 4.3 9.3zm83.6-60.9L488 182.9V44.4c0-6.6-5.4-12-12-12h-56c-6.6 0-12 5.4-12 12V117l-89.5-73.7c-17.7-14.6-43.3-14.6-61 0L4.4 251.8c-5.1 4.2-5.8 11.8-1.6 16.9l25.5 31c4.2 5.1 11.8 5.8 16.9 1.6l235.2-193.7c4.4-3.6 10.8-3.6 15.3 0l235.2 193.7c5.1 4.2 12.7 3.5 16.9-1.6l25.5-31c4.2-5.2 3.4-12.7-1.7-16.9z"
+                  />
+                </svg>
               </span>
               <span id="brand-out">AM</span>
             </a>
           </section>
           <section class="navbar-section">
-            
-                <a href="/projects" class="btn btn-link ">Projects</a>
-            <a href="https://github.com/amka/" class="btn btn-link">GitHub</a>
+               <a href="/projects" class="btn btn-link ">Projects</a>
+              <a href="https://github.com/amka/" class="btn btn-link">GitHub</a>
           </section>
         </header>
       </div>
     </div>
 
-    <h1>Tags for AM</h1>    
-    <footer id="contentinfo" class="body">
-      <address id="about" class="vcard body">
-        Proudly powered by
-        <a href="http://getpelican.com/">Pelican</a>, which takes great advantage of
-        <a href="http://python.org">Python</a>.
-      </address>
-      <!-- /#about -->
-    </footer>
+    <h1>Tags for AM</h1>
     <!-- /#contentinfo -->
   </div>
+
+  <footer id="contentinfo" class="footer">
+    <div class="columns">
+      <div class="column col-xs-12 col-md-10 col-8 centered">
+        <h3>
+          Feel free to text me if you're interested
+          <a href="mailto:hello@meamka.me" class="text-me-btn btn btn-link btn-primary">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path class="text-me-path" d="M494.586 164.516c-4.697-3.883-111.723-89.95-135.251-108.657C337.231 38.191 299.437 0 256 0c-43.205 0-80.636 37.717-103.335 55.859-24.463 19.45-131.07 105.195-135.15 108.549A48.004 48.004 0 0 0 0 201.485V464c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V201.509a48 48 0 0 0-17.414-36.993zM464 458a6 6 0 0 1-6 6H54a6 6 0 0 1-6-6V204.347c0-1.813.816-3.526 2.226-4.665 15.87-12.814 108.793-87.554 132.364-106.293C200.755 78.88 232.398 48 256 48c23.693 0 55.857 31.369 73.41 45.389 23.573 18.741 116.503 93.493 132.366 106.316a5.99 5.99 0 0 1 2.224 4.663V458zm-31.991-187.704c4.249 5.159 3.465 12.795-1.745 16.981-28.975 23.283-59.274 47.597-70.929 56.863C336.636 362.283 299.205 400 256 400c-43.452 0-81.287-38.237-103.335-55.86-11.279-8.967-41.744-33.413-70.927-56.865-5.21-4.187-5.993-11.822-1.745-16.981l15.258-18.528c4.178-5.073 11.657-5.843 16.779-1.726 28.618 23.001 58.566 47.035 70.56 56.571C200.143 320.631 232.307 352 256 352c23.602 0 55.246-30.88 73.41-45.389 11.994-9.535 41.944-33.57 70.563-56.568 5.122-4.116 12.601-3.346 16.778 1.727l15.258 18.526z"/></svg>
+          </a>
+        </h3>
+        
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
