--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="index" class="hidden fade-in">
   <div class="container">
     <div class="columns">
-      <div class="column col-8 col-xs-12 my-2 centered">
+      <div class="column col-8 col-xs-12 col-md-10 my-2 centered">
         <header class="navbar">
           <section class="navbar-section">
             <a href="/" class="navbar-brand mr-2">
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-<div class="column" style="margin-top: 2rem;margin-bottom:2rem;">
+<div class="columns" style="margin-top: 2rem;margin-bottom:2rem;">
     <div class="column col-xs-12 col-md-10 col-8 centered">
         <h1 class="text-right">Hello, my name is Andrey<br/>And I am a Developer living in Moscow, RU</h1>
     </div>
