--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 <body id="index" class="">
   <div class="container">
     <div class="columns">
-      <div class="column col-8 col-xs-12 my-2 centered">
+      <div class="column col-8 col-xs-12 col-md-10 my-2 centered">
         <header class="navbar">
           <section class="navbar-section">
             <a href="/" class="navbar-brand mr-2">
@@ -42,9 +42,13 @@
       </div>
     </div>
 
-<div class="columns">
+<div class="columns" style="margin-top:2rem;margin-bottom:2rem;">
 	<div class="column col-xs-12 col-md-10 col-8 centered">
 		<h1>Projects</h1>
+	</div>
+</div>
+<div class="columns">
+	<div class="column col-xs-12 col-md-10 col-8 centered">
 		
 
 		<h2>macOS Apps</h2>
