--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://unpkg.com/spectre.css@0.5.0/dist/spectre.min.css">
   <!-- <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css"> -->
-  <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Rubik" rel="stylesheet">
   <link href="/theme/css/animate.css" rel="stylesheet" type="text/css" />
   <link href="/theme/css/style.css" rel="stylesheet" type="text/css" />
 
@@ -42,11 +42,12 @@
       </div>
     </div>
 
-<div class="columns" style="margin-top:2rem;margin-bottom:2rem;">
+<div class="columns" style="margin-top:2rem;margin-bottom:0rem;">
 	<div class="column col-xs-12 col-md-10 col-8 centered">
 		<h1>Not Found</h1>
 	</div>
 </div>
+<div class="divider" style="margin-bottom:1rem;"></div>
 <div class="columns">
 	<div class="column col-xs-12 col-md-10 col-8 centered">
 		
